unpackaged/main/default/objects/Pipeline_Stage_Log__c/Pipeline_Stage_Log__c.object-meta.xml
<CustomObject>
    <label>Pipeline Stage Log</label>
    <nameField>
        <displayFormat>PSL-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Stage Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>