unpackaged/main/default/objects/Pipeline_Stage_Log__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(ISBLANK(Date_Stage_Changed__c), TODAY()- Date_Stage_Set__c,Date_Stage_Changed__c-Date_Stage_Set__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>