unpackaged/main/default/objects/Pipeline_Stage_Log__c/fields/Changed_Stage__c.field-meta.xml
<CustomField>
    <fullName>Changed_Stage__c</fullName>
    <label>Changed Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>