unpackaged/main/default/objects/Pipeline_Stage_Log__c/fields/Date_Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_Changed__c</fullName>
    <label>Date Stage Changed</label>
    <type>Date</type>
</CustomField>