unpackaged/main/default/objects/Pipeline_Stage_Log__c/fields/Date_Stage_Set__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_Set__c</fullName>
    <label>Date Stage Set</label>
    <type>Date</type>
</CustomField>