unpackaged/main/default/objects/Pipeline_Stage_Log__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Pipeline Stage Logs</relationshipLabel>
    <relationshipName>Pipeline_Stage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>